--- a/index.html
+++ b/index.html
@@ -394,25 +394,24 @@
                                             Join our Community
                                         </p>
                                     </a>
-                                    <button onclick="createCalendarEvent()" class="relative inline-block w-80 mx-auto p-3 rounded sm:w-auto group h-11 bg-white before:transition before:duration-300 active:before:scale-90 focus:before:scale-90 focus:before:opacity-75 hover:before:scale-100 hover:before:opacity-100"> Add to your Calendar
-                                    </button>
+                                   
                                     <add-to-calendar-button 
         name="Live Rishtey Premiere Show"
-        description="Play with me!"
-        startDate="2024-04-14"
-        startTime="05:00"
-        endDate="2024-04-14"
-        endTime="05:30"
-        timeZone="Asia/Calcutta"
-        location="YouTube Channel"
-        organizer="Easy Matri |easymatri.co.in@gmail.com"
-        recurrence="daily"
-        recurrence_interval="1"
-        availability="busy"
-        options="'Outlook.com','iCal','Apple','Google'"
-        listStyle="modal"
-        trigger="click"
-        hideIconList
+  description="Watch our Live Rishtey Premiere Show.  Event Place : YouTube Channel https://www.youtube.com/@easymatri/streams  One Stop to get Matched.😎 For Registration Please Contact us: +91 9429692526"
+  startDate="2024-04-14"
+  startTime="05:00"
+  endDate="2024-04-14"
+  endTime="05:30"
+  timeZone="Asia/Calcutta"
+  location="YouTube Channel"
+  organizer="Easy Matri | easymatri.co.in@gmail.com"
+  recurrence="daily"
+recurrence_interval="1"
+  availability="busy"
+  options="'Outlook.com','iCal','Apple','Google','Microsoft365'"
+  listStyle="overlay"
+  trigger="click"
+  hideIconList
         hideTextLabelButton
         buttonsList
         hideBackground
