--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="scroll-smooth" lang="en">
+<html lang="en">
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -19,12 +19,12 @@
     <meta name="twitter:image" content="">
     <title>LiveRishtey</title>
     <meta name="description" content="Easiest Matrimonial, Matchmaking & Marriage Profile Search Service.">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./src/output.css">
     <link rel="preload" as="style" href="./app-92cb0ebe.css">
     <link rel="preload" as="style" href="./app-e003ed48.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
     <script>
@@ -331,8 +331,8 @@
                 <div class="items-center text-center my-6 gap-x-6 lg:gap-x-9 sm:flex sm: justify-center lg:mt-6">
                   <add-to-calendar-button name="Live Rishtey Premiere Show"
                     description="Watch our Live Rishtey Premiere Show.  Event Place : YouTube Channel https://www.youtube.com/@easymatri/streams  One Stop to get Matched.😎 For Registration Please Contact us: +91 9429692526"
-                    name="[Reminder] Test the Add to Calendar Button" startDate="2024-04-20" startTime="10:15"
-                    endTime="23:30" timeZone="America/Los_Angeles"
+                    name="[Reminder] Test the Add to Calendar Button" startDate="2024-05-20" startTime="17:00"
+                    endTime="18:00" timeZone="Asia/Kolkata"
                     description="Check out the maybe easiest way to include Add to Calendar Buttons to your web projects:[br]→ [url]https://add-to-calendar-button.com/|Click here![/url]"
                     options="'Apple','Google','iCal','Outlook.com','Yahoo'" buttonsList hideTextLabelButton
                     buttonStyle="round" lightMode="bodyScheme"></add-to-calendar-button>
@@ -375,7 +375,7 @@
             </div>
             <h2
               class="max-w-lg mb-3 font-sans text-3xl font-bold leading-none tracking-tight text-gray-900 sm:text-4xl md:mx-auto">
-              What make us different...
+              What makes us different...
             </h2>
           </div>
         </div>
@@ -524,7 +524,7 @@
           </div>
         </div>
         <div class="text-center mb-6 flex items-center justify-center">
-          <a href="https://api.whatsapp.com/send/?text=Hey%2C%0ALive%20Rishtey%20is%20a%20Fast%F0%9F%9A%80%2C%20Simple%20%26%20Secure%20Matrimonial%2C%20Marriage%20Profile%20Search%20Service.%0AI%27m%20inviting%20you%20to%20check%20it.%0A%0A%3E%20*This%20is%20a%20Best%20Place%20to%20get%20Better%20Marriage%20Proposals%20(Rishtey).*%F0%9F%8E%AF%0A%0A*Ab%20insabse%20Free%20Hojao*%0A1.%20Agents%0A2.%20Delay%0A3.%20Multiple%20Groups%0A4.%20Newspapers%0A5.%20Infinite%20Scrolling%0A6.%20Spam%20Messages%0A%0A%F0%9F%93%BD%20*Subscribe%20Live%20Rishtey%20YouTube%20Channel!*%0Ahttps%3A%2F%2Fwww.youtube.com%2F%40easymatri%0A%0A%F0%9F%91%87*Join%20LiveRishtey%20Community%20Group*%0Ahttps%3A%2F%2Fchat.whatsapp.com%2FD5nqAxvMvTj0ytZskM8zWO%0A%0A%E2%9C%8D%20Admin%20%7C%20Host%20Live%20Rishtey%0A%2B919429692526%0A"
+          <a href="https://wa.me/?text=I%27m%20inviting%20you%20to%20check%20https%3A%2F%2Fwww.liverishtey.com.%20This%20is%20a%20best%20place%20to%20get%20better%20proposals (rishtey).%0A%0AAlso%20Dont%20forget%20to%20Subscribe%20YouTube%20Channel%20for%20Live%20Streams%21%0Ahttps%3A%2F%2Fwww.youtube.com%2F%40easymatri"
             class="flex py-3 px-5 rounded-full text-white items-center bg-green-500 text-2xl">
             <span><svg class="w-8 h-8" enable-background="new 0 0 455.731 455.731" fill="none" stroke="currentColor"
                 version="1.1" viewBox="0 0 455.73 455.73" xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
@@ -588,6 +588,112 @@
                   </svg>
                 </div>
               </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="bg-slate-50">
+        <div class="px-4 pt-6 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
+          <div class="max-w-xl mb-3 md:mx-auto sm:text-center lg:max-w-2xl">
+            <div>
+              <p
+                class="inline-block px-3 py-px mb-4 text-xs font-semibold tracking-wider text-teal-800 uppercase rounded-full bg-teal-accent-400">
+                Register Now
+              </p>
+            </div>
+            <h2
+              class="max-w-lg mb-3 font-roboto text-2xl font-semibold leading-none tracking-tight text-gray-900 sm:text-4xl md:mx-auto">
+              Select your plan
+            </h2>
+          </div>
+        </div>
+        <div class="h-full bg-slate-50 p-9">
+          <div class="max-w-screen-lg mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+            <div class="rounded-lg overflow-hidden shadow-md bg-indigo-50">
+              <div class="px-6 py-8">
+                <h3 class="text-3xl font-semibold mb-3 text-indigo-700">7 Days Trial</h3>
+                <ul role="list" class="mb-8 space-y-2 text-left">
+                  <li class="flex items-center space-x-3">
+                    <svg class="w-4 h-4 text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      fill="currentColor" viewBox="0 0 20 20">
+                      <path
+                        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z">
+                      </path>
+                    </svg>
+                    <span class="font-semibold text-indigo-600">LiveRishtey Premier</span>
+                  </li>
+                  <li class="flex items-center space-x-3">
+                    <svg class="w-4 h-4 text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      fill="currentColor" viewBox="0 0 20 20">
+                      <path
+                        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z">
+                      </path>
+                    </svg>
+                    <span class="font-semibold text-indigo-600">Direct Contact</span>
+                  </li>
+                </ul>
+                <h2 class="text-5xl font-bold mb-12 text-indigo-700">₹500</h2>
+                <a href="upi://pay?pa=98989991@ybl&pn=Mohammed%20Majid&am=500&cu=INR"
+                  class="bg-indigo-600 text-white text-center block py-2 px-4 rounded-sm text-lg hover:bg-indigo-700 transition duration-300 ease-in-out">Get
+                  Started</a>
+              </div>
+            </div>
+            <div
+              class="rounded-lg overflow-hidden shadow-md bg-blue-50 border bg-gradient-to-br from-blue-600 to-purple-600 ">
+              <div class="px-6 pt-8 flex justify-between">
+                <h3 class="text-3xl font-semibold text-white flex justify-between">1 Month</h3>
+                <span class="bg-yellow-200 text-yellow-900 text-center px-4 py-1.5 rounded-full text-md font-semibold">
+                  Recommended
+                </span>
+              </div>
+              <div class="px-6 py-8">
+                <ul role="list" class="mb-8 space-y-2 text-left">
+                  <li class="flex items-center space-x-3">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      fill="currentColor" viewBox="0 0 20 20">
+                      <path
+                        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z">
+                      </path>
+                    </svg>
+                    <span class="font-semibold text-white">LiveRishtey Premier Unlimited</span>
+                  </li>
+                  <li class="flex items-center space-x-3">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      fill="currentColor" viewBox="0 0 20 20">
+                      <path
+                        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z">
+                      </path>
+                    </svg>
+                    <span class="font-semibold text-white">Direct Contact</span>
+                  </li>
+                </ul>
+                <h2 class="text-5xl font-bold mb-8 text-white">₹1000<span class="text-sm text-white font-semibold">/
+                    Limited Offer</span></h2>
+                <a href="upi://pay?pa=98989991@ybl&pn=Mohammed%20Majid&am=1000&cu=INR"
+                  class="bg-white text-black block text-center py-2 px-4 rounded-dm text-lg hover:bg-slate-50 transition duration-300 ease-in-out">Pay
+                  Now</a>
+              </div>
+            </div>
+            <div class="rounded-lg overflow-hidden shadow-md bg-gradient-to-b from-red-100 to-purple-200">
+              <div class="px-6 py-8">
+                <h3 class="text-3xl font-semibold mb-3 text-red-500">3 Months</h3>
+                <ul role="list" class="mb-8 space-y-2 text-left">
+                  <li class="flex items-center space-x-3">
+                    <svg class="w-4 h-4 text-red-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      fill="currentColor" viewBox="0 0 20 20">
+                      <path
+                        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z">
+                      </path>
+                    </svg>
+                    <span class="font-semibold text-red-600">With Relationship Manager</span>
+                  </li>
+                </ul>
+                <p class="text-lg font-semibold text-slate-700 mb-8"></p>
+                <h2 class="text-5xl font-bold mb-20 text-red-600">₹30000</h2>
+                <a href="upi://pay?pa=98989991@ybl&pn=Mohammed%20Majid&am=50000&cu=INR"
+                  class="bg-red-600 text-white block text-center py-2 px-4 rounded-sm text-lg hover:bg-red-600 transition duration-300 ease-in-out">
+                  Get Started</a>
+              </div>
             </div>
           </div>
         </div>
