--- a/index.html
+++ b/index.html
@@ -690,9 +690,9 @@
                 </ul>
                 <p class="text-lg font-semibold text-slate-700 mb-8"></p>
                 <h2 class="text-5xl font-bold mb-20 text-red-600">₹30000</h2>
-                <a href="upi://pay?pa=98989991@ybl&pn=Mohammed%20Majid&am=50000&cu=INR"
+                <a href="tel:9429692526"
                   class="bg-red-600 text-white block text-center py-2 px-4 rounded-sm text-lg hover:bg-red-600 transition duration-300 ease-in-out">
-                  Get Started</a>
+                  Contact Us</a>
               </div>
             </div>
           </div>
