--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="scroll-smooth" lang="en">
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -21,6 +21,7 @@
     <meta name="description" content="Easiest Matrimonial, Matchmaking & Marriage Profile Search Service.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
+    <link rel="canonical" href="https://liverishtey.com/" itemprop="URL">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./src/output.css">
     <link rel="preload" as="style" href="./app-92cb0ebe.css">
@@ -328,6 +329,19 @@
                     </svg>
                   </a>
                 </div>
+                <section>
+                  <div>
+                    <form id="myForm">
+                      <label for="name">Name:</label>
+                      <input type="text" id="name" name="name" required>
+                      <br>
+                      <label for="email">Email:</label>
+                      <input type="email" id="email" name="email" required>
+                      <br>
+                      <button type="submit">Submit</button>
+                    </form>
+                  </div>
+                </section>
                 <div class="items-center text-center my-6 gap-x-6 lg:gap-x-9 sm:flex sm: justify-center lg:mt-6">
                   <add-to-calendar-button name="Live Rishtey Premiere Show"
                     description="Watch our Live Rishtey Premiere Show.  Event Place : YouTube Channel https://www.youtube.com/@easymatri/streams  One Stop to get Matched.😎 For Registration Please Contact us: +91 9429692526"
@@ -524,7 +538,7 @@
           </div>
         </div>
         <div class="text-center mb-6 flex items-center justify-center">
-          <a href="https://api.whatsapp.com/send/?text=Hey%2C%0ALive%20Rishtey%20is%20a%20Fast%F0%9F%9A%80%2C%20Simple%20%26%20Secure%20Matrimonial%2C%20Marriage%20Profile%20Search%20Service.%0AI%27m%20inviting%20you%20to%20check%20it.%0A%0A%3E%20*This%20is%20a%20Best%20Place%20to%20get%20Better%20Marriage%20Proposals%20(Rishtey).*%F0%9F%8E%AF%0A%0A*Ab%20insabse%20Free%20Hojao*%0A1.%20Agents%0A2.%20Delay%0A3.%20Multiple%20Groups%0A4.%20Newspapers%0A5.%20Infinite%20Scrolling%0A6.%20Spam%20Messages%0A%0A%F0%9F%93%BD%20*Subscribe%20Live%20Rishtey%20YouTube%20Channel!*%0Ahttps%3A%2F%2Fwww.youtube.com%2F%40easymatri%0A%0A%F0%9F%91%87*Join%20LiveRishtey%20Community%20Group*%0Ahttps%3A%2F%2Fchat.whatsapp.com%2FD5nqAxvMvTj0ytZskM8zWO%0A%0A%E2%9C%8D%20Admin%20%7C%20Host%20Live%20Rishtey%0A%2B919429692526%0A"
+          <a href="https://wa.me/?text=I%27m%20inviting%20you%20to%20check%20https%3A%2F%2Fwww.liverishtey.com.%20This%20is%20a%20best%20place%20to%20get%20better%20proposals (rishtey).%0A%0AAlso%20Dont%20forget%20to%20Subscribe%20YouTube%20Channel%20for%20Live%20Streams%21%0Ahttps%3A%2F%2Fwww.youtube.com%2F%40easymatri"
             class="flex py-3 px-5 rounded-full text-white items-center bg-green-500 text-2xl">
             <span><svg class="w-8 h-8" enable-background="new 0 0 455.731 455.731" fill="none" stroke="currentColor"
                 version="1.1" viewBox="0 0 455.73 455.73" xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
@@ -690,9 +704,9 @@
                 </ul>
                 <p class="text-lg font-semibold text-slate-700 mb-8"></p>
                 <h2 class="text-5xl font-bold mb-20 text-red-600">₹30000</h2>
-                <a href="tel:9429692526"
+                <a href="upi://pay?pa=98989991@ybl&pn=Mohammed%20Majid&am=50000&cu=INR"
                   class="bg-red-600 text-white block text-center py-2 px-4 rounded-sm text-lg hover:bg-red-600 transition duration-300 ease-in-out">
-                  Contact Us</a>
+                  Get Started</a>
               </div>
             </div>
           </div>
@@ -802,6 +816,7 @@
         </div>
       </section>
     </main>
+
   </body>
 
 </html>
