--- a/i/index.html
+++ b/i/index.html
@@ -531,6 +531,7 @@
         </button>
       </div>
       <script src="sj.js"></script>
+      <script src="mian.js"></script>
       <!-- <script src="sjpremiumcode.js"></script> -->
       <footer>
         <footer class="bg-gray-900 text-gray-300 mt-16 py-12">
