--- a/i/index.html
+++ b/i/index.html
@@ -530,7 +530,7 @@
           <i class="fas fa-filter"></i>
         </button>
       </div>
-      <script src="sj.js"></script>
+      <!-- <script src="sj.js"></script> -->
       <script src="mian.js"></script>
       <!-- <script src="sjpremiumcode.js"></script> -->
       <footer>
