--- a/i/index.html
+++ b/i/index.html
@@ -368,6 +368,65 @@
             <p class="text-gray-600">Urgent Ads</p>
           </div>
         </div>
+        <div x-data="userDirectory">
+          <!-- Active Filters Section -->
+          <div class="flex flex-wrap gap-2 mb-6 bg-gray-50 border-1 border-yellow-100 p-4 shadow"
+            x-show="searchQuery || filters.education || filters.gender || filters.priority">
+
+            <!-- Search Query Badge -->
+            <template x-if="searchQuery">
+              <span
+                class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
+                Search: <span x-text="searchQuery" class="ml-1"></span>
+                <button @click="searchQuery = ''; resetPagination()" class="ml-2 text-indigo-600 hover:text-indigo-900">
+                  <i class="fas fa-times"></i>
+                </button>
+              </span>
+            </template>
+
+            <!-- Education Badge -->
+            <template x-if="filters.education">
+              <span
+                class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-green-100 text-green-800">
+                Education: <span x-text="filters.education" class="ml-1 capitalize"></span>
+                <button @click="filters.education = ''; resetPagination()"
+                  class="ml-2 text-green-600 hover:text-green-900">
+                  <i class="fas fa-times"></i>
+                </button>
+              </span>
+            </template>
+
+            <!-- Gender Badge -->
+            <template x-if="filters.gender">
+              <span
+                class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-blue-100 text-blue-800">
+                Gender: <span x-text="filters.gender" class="ml-1 capitalize"></span>
+                <button @click="filters.gender = ''; resetPagination()" class="ml-2 text-blue-600 hover:text-blue-900">
+                  <i class="fas fa-times"></i>
+                </button>
+              </span>
+            </template>
+
+            <!-- Priority Badge -->
+            <template x-if="filters.priority">
+              <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-red-100 text-red-800">
+                Priority: <span x-text="filters.priority" class="ml-1 capitalize"></span>
+                <button @click="filters.priority = ''; resetPagination()" class="ml-2 text-red-600 hover:text-red-900">
+                  <i class="fas fa-times"></i>
+                </button>
+              </span>
+            </template>
+
+            <!-- Clear All Button -->
+            <button
+              @click="searchQuery = ''; filters.education = ''; filters.gender = ''; filters.priority = ''; resetPagination()"
+              class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-gray-300 text-gray-800 hover:bg-gray-200">
+              Clear All Filters
+              <i class="fas fa-times ml-2"></i>
+            </button>
+          </div>
+        </div>
+
         <!-- User List -->
         <div id="userList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <template x-for="user in displayedUsers" :key="user.id">
